--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
          <p><font Face="Verdana" Size="3">Português Fluente<br>Inglês Avançado</font></p>
    <h2><font Face="Verdana" Color="FF00000" Size="5"><u>Cursos Certificados:</u></font></h2>
          <ul>
-            <li><a href="file:///C:/Users/lucas/Desktop/certificados/certificado.pdf"><font Color="#0000" Size="3">QuarentenaDev(Programação)</font></a>
+            <li><a href="certificado.pdf"><font Color="#0000" Size="3">QuarentenaDev(Programação)</font></a>
                <li>Informática
                   <li>Inglês
                      <li>Corel Drawn
                         <li>Lógica de Programação
                            <li>Robótica
-                              <li><a href="file:///C:/Users/lucas/Desktop/certificados/certificado1%20Bradesco.pdf"><font Color="#0000" Size="3">HTML Básico</font></a>
-                                 <li><a href="file:///C:/Users/lucas/Desktop/certificados/certificado%202%20bradesco.pdf"><font Color="#0000" Size="3">HTML Avançado</font></a>
+                              <li><a href="certificado1%20Bradesco.pdf"><font Color="#0000" Size="3">HTML Básico</font></a>
+                                 <li><a href="certificado%202%20bradesco.pdf"><font Color="#0000" Size="3">HTML Avançado</font></a>
       </ul>
       <h2><font Face="Verdana" Color="FF00000" Size="5"><u>Premiações:</u></font></h2>
          <ul>
